# practice24

./: .gitignore  Cargo.toml  README.md  dataload.py  recompress.py  requirements.txt  src.py
regularize/: Cargo.toml
regularize/src/: main.rs
src/: main.rs  util.rs
src/geometry3d/: direction.rs  distance.rs  intersect.rs  line.rs  line_segment.rs  mod.rs  plane.rs  point.rs  vector.rs
