[package]
name = "practice24"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.18"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", rev = "26046fb4900ec38afd2a1c0494cff688b288662e" }
itertools = "0.13.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
num = "0.4.3"
num-traits = "0.2.19"
nutype = "0.4.3"
paste = "1.0.15"
plotly = "0.9.0"
rayon = "1.10.0"
thiserror = "1.0.63"
